# GameLogiX

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
imgui/: imgui_util.cpp  imgui_util.h
src/: color.hpp  game.cpp  game.h  game.hpp  helper.hpp
